--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
 
-<!-- HEADER -->
 <header class="site-header">
   <div class="header-container">
     <a href="#hero" class="logo">Nordic</a>
-    <nav class="nav-menu">
+    <nav class="nav-menu" id="navMenu">
       <a href="#hero">Hem</a>
       <a href="#gallery">Galleri</a>
       <a href="#lore">Lore</a>
@@ -44,7 +43,6 @@
 <section class="gallery-section" id="gallery">
   <h2>Våra bilder</h2>
   <div class="fridge" id="gallery-fridge">
-    <!-- Galleri-bilder läggs här -->
     <div class="photo" data-title="Bild 1" data-desc="Beskrivning 1"><img src="img/img1.jpg" alt="Bild 1"><p>Bild 1</p></div>
     <div class="photo" data-title="Bild 2" data-desc="Beskrivning 2"><img src="img/img2.jpg" alt="Bild 2"><p>Bild 2</p></div>
     <div class="photo" data-title="Bild 3" data-desc="Beskrivning 3"><img src="img/img3.jpg" alt="Bild 3"><p>Bild 3</p></div>
