--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 <section class="gallery-section" id="gallery">
   <h2>Våra bilder</h2>
   <div class="fridge" id="gallery-fridge">
-    <div class="photo" data-title="Bild 1" data-desc="Beskrivning 1"><img src="img/img1.jpg" alt="Bild 1"><p>Bild 1</p></div>
-    <div class="photo" data-title="Bild 2" data-desc="Beskrivning 2"><img src="img/img2.jpg" alt="Bild 2"><p>Bild 2</p></div>
-    <div class="photo" data-title="Bild 3" data-desc="Beskrivning 3"><img src="img/img3.jpg" alt="Bild 3"><p>Bild 3</p></div>
+    <!-- Bilder laddas via script.js -->
   </div>
 </section>
 
